--- a/public/index.html
+++ b/public/index.html
@@ -36,11 +36,11 @@
 
 
   <!-- site banner -->
-  <main class="mt-10 px-4 md:mt-16 flex justify-center">
+  <main class="mt-10 px-4 md:mt-16 mx-automax-w-7xl lg:mt-20 lg:px-8 xl:mt-28">
     <div class="sm:text-center lg:text-left">
       <h1 class="tracking-tight font-extrabold text-4xl sm:text-5xl md:text-6xl">
-        <span class="block">Premium Properties</span>
-        <span class="block text-green-400">Non-premium Prices</span>
+        <span class="block xl:inline">Premium Properties</span>
+        <span class="block text-green-500 xl:inline">Non-premium Prices</span>
       </h1>
 
       <p class="mt-3 text-base text-gray-500 md:text-xl md:mt-5 
@@ -50,7 +50,7 @@
         at affordable prices. Luxury is our priority 
         and budget is our constrain. Pick and choose
          from 1000+ properties across the globe.</p>
-      <div class="mt-5 sm:mt-8 sm:flex sm:justify-center">
+      <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
         <div class="md:m-2">
           <a class="bg-green-500 text-white px-8 py-3
            flex justify-center rounded-md" href="">View properties</a>
@@ -364,6 +364,88 @@
   </form>
 </div>
 <!-- contact card -->
+
+<!-- footer -->
+<footer class="pt-40 px-4 divide-y">
+  <div class="container flex flex-col justify-between mx-auto space-y-8 lg:flex-row lg:space-y-0">
+    <div class="lg:w-1/3">
+      <a href="" class="flex justify-center">
+        <div class="flex w-12 h-12">
+          <img src="../image/house.png" class="h-8 w-8 mr-2" alt="">
+        </div>
+        <span class="font-semibold text-gray-500 text-2xl">
+          Prime Properties
+        </span>
+      </a>
+    </div>
+    <div class="grid grid-cols-2 gap-x-3 gap-y-8 text-sm sm:grid-cols-4 lg:w-2/3">
+      <div class="space-y-3">
+        <h3 class="text-green-500 uppercase tracking-wide">Product</h3>
+        <ul class="space-y-1">
+          <li>
+            <a href="">Features</a>
+          </li>
+          <li>
+            <a href="">Intergrations</a>
+          </li>
+          <li>
+            <a href="">Pricing</a>
+          </li>
+          <li>
+            <a href="">FAQ</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="space-y-3">
+        <h3 class="text-green-500 uppercase tracking-wide">Company</h3>
+        <ul class="space-y-1">
+          <li>
+            <a href="">Features</a>
+          </li>
+          <li>
+            <a href="">Intergrations</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="space-y-3">
+        <h3 class="text-green-500 uppercase tracking-wide">Developers</h3>
+        <ul class="space-y-1">
+          <li>
+            <a href="">Features</a>
+          </li>
+          <li>
+            <a href="">Intergrations</a>
+          </li>
+          <li>
+            <a href="">Pricing</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="space-y-3">
+        <h3 class="text-green-500 uppercase tracking-wide">Social Media</h3>
+        <div class="flex justify-start space-x-3">
+          <a href="">
+            <img src="../image/facebook.svg" alt="">
+          </a>
+          <a href="">
+            <img src="../image/twitter.svg" alt="">
+          </a>
+          <a href="">
+            <img src="../image/instagram.svg" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="py-6 text-center text-green-500 text-sm">© 1968 Company Co. All rights reserved.</div>
+
+
+</footer>
+<!-- footer -->
 
 
 </body>
