--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <div class="flex space-x-7">
           <div>
             <a class="flex items-center py-4 px-2" href="#">
-              <img class="h-8 w-8 mr-2" src="/image/house.png" alt="">
+              <img class="h-8 w-8 mr-2" src="./image/house.png" alt="">
               <span class="font-semibold text-gray-500 text-lg">Prime Properties</span>
             </a>
           </div>
@@ -74,7 +74,7 @@
   <div class=" flex p-10 grid sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5">
   <!-- card -->
     <div class="rounded overflow-hidden shadow-lg">
-      <img class="w-full" src="/image/home1.jpg" alt="">
+      <img class="w-full" src="./image/home1.jpg" alt="">
       <div class="px-6 py-4">
         <div class="font-bold text-xl mb-2">Orchid Villa</div>
         <p class="text-gray-700">Lorem ipsum, dolor sit amet consectetur 
@@ -101,7 +101,7 @@
 
 
     <div class="rounded overflow-hidden shadow-lg">
-      <img class="w-full" src="/image/home2.jpg" alt="">
+      <img class="w-full" src="./image/home2.jpg" alt="">
       <div class="px-6 py-4">
         <div class="font-bold text-xl mb-2">577 Gracia</div>
         <p class="text-gray-700">Lorem ipsum, dolor sit amet consectetur 
@@ -127,7 +127,7 @@
 
 
     <div class="rounded overflow-hidden shadow-lg">
-      <img class="w-full" src="/image/home3.jpg" alt="">
+      <img class="w-full" src="./image/home3.jpg" alt="">
       <div class="px-6 py-4">
         <div class="font-bold text-xl mb-2">Nexa Epitome</div>
         <p class="text-gray-700">Lorem ipsum, dolor sit amet consectetur 
@@ -158,7 +158,7 @@
   <!-- banner -->
   <div class="py-20 h-screen" style="background-image: 
   linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), 
-  url(/image/luxury.jpg)">
+  url(./image/luxury.jpg)">
     <div class="contaianer px-10 py-20 mb-20 mt-40">
       <h2 class="text-4xl font-bold text-white mb-2">
         Expirience Luxury Like Never Before</h2>
@@ -187,7 +187,7 @@
   <div class=" flex p-10 grid sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5">
     <!-- card -->
       <div class="rounded overflow-hidden shadow-lg">
-        <img class="w-full" src="/image/ny.jpg" alt="">
+        <img class="w-full" src="./image/ny.jpg" alt="">
         <div class="px-6 py-4">
           <div class="font-bold text-xl mb-2">Newyork</div>
           <p class="text-gray-700">Lorem ipsum, dolor sit amet consectetur 
@@ -199,7 +199,7 @@
   
          
       <div class="rounded overflow-hidden shadow-lg">
-        <img class="w-full" src="/image/california.jpg" alt="">
+        <img class="w-full" src="./image/california.jpg" alt="">
         <div class="px-6 py-4">
           <div class="font-bold text-xl mb-2">Sanfransisco</div>
           <p class="text-gray-700">Lorem ipsum, dolor sit amet consectetur 
@@ -211,7 +211,7 @@
 
 
       <div class="rounded overflow-hidden shadow-lg">
-        <img class="w-full" src="/image/chicago.jpg" alt="">
+        <img class="w-full" src="./image/chicago.jpg" alt="">
         <div class="px-6 py-4">
           <div class="font-bold text-xl mb-2">Ohio</div>
           <p class="text-gray-700">Lorem ipsum, dolor sit amet consectetur 
@@ -256,7 +256,7 @@
     </p>
     <div class="flex bg-green-100 items-center rounded-full">
       <a href="" class="block relative">
-        <img class="h-10 w-10 rounded-full mx-auto" src="/image/avatar.png" alt="">
+        <img class="h-10 w-10 rounded-full mx-auto" src="./image/avatar.png" alt="">
       </a>
       <div class="flex flex-col ml-2 justify-between">
         <span class="text-sm text-green-500 font-bold">El-hakkavod</span>
@@ -274,7 +274,7 @@
     </p>
     <div class="flex bg-green-100 items-center rounded-full">
       <a href="" class="block relative">
-        <img class="h-10 w-10 rounded-full mx-auto" src="/image/avatar.png" alt="">
+        <img class="h-10 w-10 rounded-full mx-auto" src="./image/avatar.png" alt="">
       </a>
       <div class="flex flex-col ml-2 justify-between">
         <span class="text-sm text-green-500 font-bold">El-hallal</span>
@@ -292,7 +292,7 @@
     </p>
     <div class="flex bg-green-100 items-center rounded-full">
       <a href="" class="block relative">
-        <img class="h-10 w-10 rounded-full mx-auto" src="/image/avatar.png" alt="">
+        <img class="h-10 w-10 rounded-full mx-auto" src="./image/avatar.png" alt="">
       </a>
       <div class="flex flex-col ml-2 justify-between">
         <span class="text-sm text-green-500 font-bold">El-ahavah</span>
@@ -371,7 +371,7 @@
     <div class="lg:w-1/3">
       <a href="" class="flex justify-center">
         <div class="flex w-12 h-12">
-          <img src="/image/house.png" class="h-8 w-8 mr-2" alt="">
+          <img src="./image/house.png" class="h-8 w-8 mr-2" alt="">
         </div>
         <span class="font-semibold text-gray-500 text-2xl">
           Prime Properties
@@ -428,13 +428,13 @@
         <h3 class="text-green-500 uppercase tracking-wide">Social Media</h3>
         <div class="flex justify-start space-x-3">
           <a href="">
-            <img src="/image/facebook.svg" alt="">
+            <img src="./image/facebook.svg" alt="">
           </a>
           <a href="">
-            <img src="/image/twitter.svg" alt="">
+            <img src="./image/twitter.svg" alt="">
           </a>
           <a href="">
-            <img src="/image/instagram.svg" alt="">
+            <img src="./image/instagram.svg" alt="">
           </a>
         </div>
       </div>
